syntax = "proto3";

import "google/api/annotations.proto";
package stockscreener;

option go_package = "./proto;stockscreener";

service StockScreener {
	rpc Call(CallRequest) returns (CallResponse) {
		option (google.api.http) = {
			post: "/v1/call"
			body: "*"
		};
	
	}
}

message CallRequest {
	string name = 1;
}

message CallResponse {
	string msg = 1;
}